Added material icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,3 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply text-base font-[Roboto] text-[#020408]
+  }
+
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-bold
+  }
+
+  h1 {
+    @apply text-3xl
+  }
+
+  h2 {
+    @apply text-2xl
+  }
+
+  button {
+    @apply rounded-[5px]
+  }
+}
