--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   body {
-    @apply text-base font-[Roboto] text-[#020408]
+    @apply bg-secondary text-base font-[Roboto] text-black
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -12,11 +12,11 @@
   }
 
   h1 {
-    @apply text-3xl
+    @apply text-2xl md:text-3xl
   }
 
   h2 {
-    @apply text-2xl
+    @apply text-xl md:text-2xl
   }
 
   button {
